# xoofff

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: xoodoo.rs  xoofff.rs
examples/: deck_function.rs
src/: lib.rs  rolling.rs  tests.rs  xoodoo.rs  xoofff.rs
src/simd/: mod.rs  x16.rs  x4.rs  x8.rs  xoodoo.rs
