[package]
name = "xoofff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crunchy = "=0.2.2"

[dev-dependencies]
rand = "=0.8.5"
test-case = "=3.1.0"
criterion = "=0.4.0"

[features]
dev = []

[lib]
bench = false

[[bench]]
name = "xoodoo"
harness = false
required-features = ["dev"]

[[bench]]
name = "xoofff"
harness = false
