[package]
name = "xoofff"
version = "0.1.1"
edition = "2021"
authors = ["Anjan Roy <hello@itzmeanjan.in>"]
description = "Farfalle with Xoodoo: Parallel Permutation-based Cryptography"
documentation = "https://github.com/itzmeanjan/xoofff"
readme = "README.md"
repository = "https://github.com/itzmeanjan/xoofff.git"
license = "MIT"
keywords = ["xoodoo", "farfalle", "deck-function", "permutation", "xoofff"]
categories = ["cryptography"]
exclude = ["/kats"]

[dependencies]
crunchy = "=0.2.2"

[dev-dependencies]
rand = "=0.8.5"
test-case = "=3.1.0"
criterion = "=0.5.1"
hex = "=0.4.3"

[features]
dev = []
simd = []

[lib]
bench = false

[[bench]]
name = "xoodoo"
harness = false
required-features = ["dev"]

[[bench]]
name = "xoofff"
harness = false
